# pr-bot

./: .gitignore  README.md  pyproject.toml
examples/sample-repo/: README.md  strutils.py
examples/sample-repo/tests/: test_strutils.py
prbot/: __init__.py  agent.py  cli.py  llm.py  sandbox.py  tools.py  trace.py  viewer.py
tests/: test_agent_dry_run.py  test_sandbox.py  test_tools.py
