[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prbot"
version = "0.1.0"
description = "Autonomous coding agent with planner/executor/critic loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Avin Indrasoma" }]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.40"]
dev = ["pytest>=7"]

[project.scripts]
prbot = "prbot.cli:main"

[tool.setuptools]
packages = ["prbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
